syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package messanger;

option go_package = "proto/";

message MessageSendRequest {
  string body = 1;
  string sendUserId = 2;
  google.protobuf.Timestamp createdAt = 3;
}

message Message{
  string body = 1;
}

message MessageSendResponse {
  bool result = 1;
}

service Messanger {
  rpc SendMessage(MessageSendRequest) returns (MessageSendResponse) {};
  rpc GetMessages(google.protobuf.Empty) returns (stream Message) {};
}